# gosai

./: .gitmodules  getdefines.sh  go.mod  go.sum
examples/: main.go
gosai/: api_tbl_gen.py  gen_c_adaptor.py  gosai.go  main.py
gosai/adaptor/: CMakeLists.txt
gosai/adaptor/gosai/: gosai.go
